# treecko

./: :  Cargo.toml  script.zsh
src/: main.rs
src/lib/: cli.rs  mod.rs  path.rs
src/lib/commands/: goto.rs  list.rs  mod.rs  prelude.rs
src/lib/commands/shell/: mod.rs
src/lib/core/: project.rs
src/lib/utils/: mod.rs
